examples/test/testpolicy1852.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1852
  namespace: namespace226
spec:
  podSelector:
    matchLabels:
      key1: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value46
          key49: value8
          key30: value37
      podSelector:
        matchLabels:
          key38: value11
          key14: value14
